# Synchronize-directories-cpp

./: .gitignore  CMakeLists.txt  README.md
include/: argument_parser.hpp  constants.hpp  directory_handler.hpp  helpers.hpp  loggers.hpp  synchronize.hpp
src/: argument_parser.cpp  constants.cpp  directory_handler.cpp  helpers.cpp  loggers.cpp  main.cpp  synchronize.cpp
